# progetto_foodomnia

./: .gitignore  Demonyms.csv  README.md  app.py  cose.py  datasets.py  diario.md  error.py  functions.py  hello.py  homepage.py  info.py  ingredients.py  map.py  page_2.py  pyproject.toml  recipe.py  recipes.py  recipes_list.py  try.py
 ~/.streamlit/: config.toml
.streamlit/: config.toml
