[project]
name = "progetto-foodomnia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icecream>=2.1.3",
    "kagglehub>=0.3.4",
    "plotly-express>=0.4.1",
    "polars>=1.14.0",
    "pycountry>=24.6.1",
    "streamlit-searchbox>=0.1.19",
    "streamlit>=1.40.1",
]
